--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@testing-library/vue": "^6.4.2",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/test-utils": "^2.4.4",
     "cypress": "^13.6.3",
     "jsdom": "^24.0.0",
     "start-server-and-test": "^2.0.3",
-    "vite": "^5.0.11",
+    "vite": "^5.1.1",
     "vitest": "^1.2.2"
   }
 }
