--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "devDependencies": {
     "@testing-library/vue": "^6.4.2",
     "@vitejs/plugin-vue": "^5.0.3",
+    "@vitest/ui": "^1.2.2",
     "@vue/test-utils": "^2.4.4",
-    "cypress": "^13.6.3",
+    "cypress": "^13.6.4",
     "jsdom": "^24.0.0",
     "start-server-and-test": "^2.0.3",
     "vite": "^5.1.1",
